<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:databinding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackgroundBoard">

    <br.com.goin.component.ui.kit.toolbar.GoinToolbar
        android:id="@+id/toolbarFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></br.com.goin.component.ui.kit.toolbar.GoinToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarFilter"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categorie_label"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/style_orange"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewCategory"
                app:layout_constraintTop_toTopOf="@+id/textViewCategory" />

            <TextView
                android:id="@+id/textViewlabelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filter_lable_price"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCategoryName" />

            <SeekBar
                android:id="@+id/search_price_rangebar"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:max="1500"
                android:progress="1500"
                android:progressTint="@color/grapefruit"
                android:thumb="@drawable/icon_ball_seek_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewlabelPrice" />

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="$"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_price_rangebar" />

            <TextView
                android:id="@+id/textDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/date"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewValue" />

            <TextView
                android:id="@+id/dateLabelFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/from"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDateLabel" />

            <TextView
                android:id="@+id/txtDateFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/not_too_round_background_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="DD/MM/AAAA"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/txtDateTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelFrom" />

            <TextView
                android:id="@+id/dateLabelTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toDate"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/dateLabelFrom"
                app:layout_constraintStart_toStartOf="@+id/txtDateTo"
                app:layout_constraintTop_toTopOf="@+id/dateLabelFrom" />

            <TextView
                android:id="@+id/txtDateTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/not_too_round_background_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="DD/MM/AAAA"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtDateFrom"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelTo" />


            <LinearLayout
                android:id="@+id/search_btn_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/lightSilver"
                android:orientation="horizontal"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDateFrom"
                app:layout_constraintVertical_bias="1.0">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/stroke_background_white_button_filter"
                    android:text="@string/clear_filter"
                    android:textColor="@color/colorRedButtonFilter" />

                <Button
                    android:id="@+id/filter_button"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_background_red_button_filter"
                    android:text="@string/filter_button"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>