<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <br.com.goin.component.ui.kit.toolbar.GoinToolbar
        android:id="@+id/toolbarFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarFilter"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraint_filter"
            android:theme="@style/Theme.MaterialComponents">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_subcategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:id="@+id/dateLabelFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/from"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/colorFilterButtonClearText"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_subcategories" />

            <TextView
                android:id="@+id/txtDateFrom"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/color_subcategories_filter"
                android:background="@drawable/background_subcategories_filter"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/txtDateTo"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelFrom" />

            <TextView
                android:id="@+id/dateLabelTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toDate"
                android:textSize="14sp"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/colorFilterButtonClearText"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintBottom_toBottomOf="@+id/dateLabelFrom"
                app:layout_constraintStart_toStartOf="@+id/txtDateTo"
                app:layout_constraintTop_toTopOf="@+id/dateLabelFrom" />

            <TextView
                android:id="@+id/txtDateTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:padding="5dp"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/color_subcategories_filter"
                android:background="@drawable/background_subcategories_filter"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtDateFrom"
                app:layout_constraintTop_toBottomOf="@+id/dateLabelTo" />


            <TextView
                android:id="@+id/textViewLabelPrice"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/label_price"
                android:textColor="@color/colorFilterButtonClearText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/txtDateFrom" />

            <TextView
                android:id="@+id/textViewLabelDollar"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/range_label_dollar"
                android:textColor="@color/text_color_unselected_chip"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelPrice" />


            <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/rangebar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDollar"
                app:mrb_connectingLineColor="@color/colorPrimary"
                app:mrb_pinColor="@color/colorPrimary"
                app:mrb_pinMaxFont="16sp"
                app:mrb_rangeBarColor="#DDDDE1"
                app:mrb_selectorBoundaryColor="@color/white"
                app:mrb_selectorBoundarySize="4dp"
                app:mrb_selectorColor="@color/colorPrimary"
                app:mrb_selectorSize="10dp"
                app:mrb_tickColor="@color/colorPrimary"
                app:mrb_tickDefaultLabel="label"
                android:visibility="visible"
                app:mrb_tickStart="1"/>

            <SeekBar
                android:id="@+id/search_price_rangebar"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:max="1500"
                android:visibility="gone"
                android:progressDrawable="@drawable/seek_style"
                android:progress="1500"
                android:thumb="@drawable/icon_ball_seek_bar"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDollar"/>

            <TextView
                android:id="@+id/textViewConveniece"
                android:layout_width="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/convenince"
                android:textColor="@color/colorFilterButtonClearText"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/rangebar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_tags"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="4dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@+id/search_btn"
                app:layout_constraintTop_toBottomOf="@+id/textViewConveniece"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightSilver"
                android:orientation="horizontal"
                android:paddingLeft="6dp"
                android:paddingBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/top_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EDEDED"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonClear"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_filter_clear_button"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/clear_filter"
                    android:textAllCaps="false"
                    android:textColor="@color/colorFilterButtonClearText"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/filter_button"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/filter_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_filter_button"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/filter_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonClear"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>